--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="intro.js" charset="UTF-8"></script>
   <script src="play.js"></script>
   <script src="tutorial.js"></script>
+  <script src="stageInfo.js"></script>
   <script src="ingame_menu.js"></script>
   <script src="summary.js"></script>
   <script src="win.js"></script>
